src/test/ui/interp-user-fn.stderr
error[E0658]: `#[rustc_interp_user_fn]` is for use by interpreters only
  --> $DIR/interp-user-fn.rs:4:21
   |
LL |     let user_body = #[rustc_interp_user_fn] || {};
   |                     ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add `#![feature(rustc_attrs)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
